--- a/Shapes_of_Distribution.ipynb
+++ b/Shapes_of_Distribution.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "<tfp.distributions.Uniform 'Uniform/' batch_shape=() event_shape=() dtype=float32>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,17 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(<tfp.distributions.MultivariateNormalDiag 'MultivariateNormalDiag/' batch_shape=(1,) event_shape=(3,) dtype=float32>,\n",
-       " <tf.Tensor: id=1931, shape=(1, 3), dtype=float32, numpy=array([[1., 2., 3.]], dtype=float32)>)"
+       " <tf.Tensor: id=125, shape=(1, 3), dtype=float32, numpy=array([[1., 2., 3.]], dtype=float32)>)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "<tfp.distributions.Uniform 'Uniform/' batch_shape=(2,) event_shape=() dtype=float32>"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -143,15 +143,15 @@
     {
      "data": {
       "text/plain": [
-       "(<tf.Tensor: id=2038, shape=(2, 3), dtype=float32, numpy=\n",
+       "(<tf.Tensor: id=346, shape=(2, 3), dtype=float32, numpy=\n",
        " array([[1., 2., 3.],\n",
        "        [1., 2., 3.]], dtype=float32)>,\n",
-       " <tf.Tensor: id=1948, shape=(2, 3), dtype=float32, numpy=\n",
+       " <tf.Tensor: id=256, shape=(2, 3), dtype=float32, numpy=\n",
        " array([[1., 2., 3.],\n",
        "        [1., 2., 3.]], dtype=float32)>)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[1.6436319, 1.4246452, 1.2373348]], dtype=float32),\n",
+       "(array([[1.016195 , 1.0958419, 1.6753641]], dtype=float32),\n",
        " TensorShape([1, 3]))"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,23 +197,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(TensorShape([1, 3, 2]),\n",
+       "(<tf.Tensor: id=568, shape=(1, 3, 2), dtype=float32, numpy=\n",
+       " array([[[1.3135304, 2.       ],\n",
+       "         [1.4308645, 2.       ],\n",
+       "         [1.308127 , 2.       ]]], dtype=float32)>,\n",
        " <tfp.distributions.Uniform 'Uniform/' batch_shape=(2,) event_shape=() dtype=float32>)"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n2.sample([1,3]).shape, n2"
+    "n2.sample([1,3]), n2"
    ]
   },
   {
@@ -228,17 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "y = [1.1,2.2,3.3]\n",
-    "y_true = np.asarray([1.,2.,3.],dtype=np.float32)"
+    "y_true = np.asarray([1.,2.,3.],dtype=np.float32)\n",
+    "#y_true = np.asarray([[1.,2.,3.],[1.,2.,3.]],dtype=np.float32) does also work"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,22 +251,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=2186, shape=(3,), dtype=float32, numpy=array([-0.24579135, -0.30579138, -0.40579128], dtype=float32)>"
+       "(<tf.Tensor: id=772, shape=(3,), dtype=float32, numpy=array([-0.24579135, -0.30579138, -0.40579128], dtype=float32)>,\n",
+       " -0.957374)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n3.log_prob(y_true) #Three number"
+    "n3.log_prob(y_true), np.sum(n3.log_prob(y_true).numpy()) #Three number"
    ]
   },
   {
@@ -275,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +289,7 @@
        "<tfp.distributions.Independent 'IndependentNormal/' batch_shape=() event_shape=(3,) dtype=float32>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=2230, shape=(), dtype=float32, numpy=-0.957374>"
+       "<tf.Tensor: id=653, shape=(), dtype=float32, numpy=-0.957374>"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,6 +321,13 @@
    "source": [
     "n3e.log_prob(y_true) #A single number the sum of all three log-likelihoods from above"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
