--- a/multinominal_mnist.ipynb
+++ b/multinominal_mnist.ipynb
@@ -128,7 +128,7 @@
         "outputId": "7e9b288b-e1bc-4e04-941f-468c745366ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 286
+          "height": 287
         }
       },
       "cell_type": "code",
@@ -169,7 +169,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 69
         },
         "outputId": "c5d03d2c-9474-4234-c4b8-3be31bbbfa9b"
       },
@@ -298,7 +298,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 703
+          "height": 711
         },
         "outputId": "d53b880f-4e71-4270-d2f2-340f0d03a2b4"
       },
@@ -442,6 +442,19 @@
     },
     {
       "metadata": {
+        "id": "X82IOFesGEWB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "P2xCEaVFXJFc",
         "colab_type": "code",
         "colab": {}
@@ -452,6 +465,132 @@
         "x_val=np.array(x_val,dtype=\"float32\")\n",
         "x_test=np.array(x_test,dtype=\"float32\")\n",
         "# tfp needs float 32"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "E-fcq9VaES7n",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 329
+        },
+        "outputId": "18f729e6-050e-4476-84f7-78a79925044e"
+      },
+      "cell_type": "code",
+      "source": [
+        "model = tf.keras.Sequential()\n",
+        "\n",
+        "model.add(tf.keras.layers.Convolution2D(8, kernel_size=(3,3), padding='SAME', activation=tf.nn.relu,input_shape=(28,28,1)))\n",
+        "model.add(tf.keras.layers.Flatten())\n",
+        "model.add(tf.keras.layers.Dense(40,activation=tf.nn.relu))\n",
+        "model.add(tf.keras.layers.Dense(10,activation=tf.nn.softmax))\n",
+        "model.add(tfp.layers.DistributionLambda(lambda t: tfd.Multinomial(total_count=1,probs=t+1e-9)))\n",
+        "\n",
+        "model.summary()\n",
+        "model.compile(optimizer=tf.optimizers.Adam(learning_rate=0.001), loss=negloglik,  metrics=['accuracy'])\n",
+        "          \n",
+        "          "
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_28\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "conv2d_88 (Conv2D)           (None, 28, 28, 8)         80        \n",
+            "_________________________________________________________________\n",
+            "flatten_28 (Flatten)         (None, 6272)              0         \n",
+            "_________________________________________________________________\n",
+            "dense_44 (Dense)             (None, 40)                250920    \n",
+            "_________________________________________________________________\n",
+            "dense_45 (Dense)             (None, 10)                410       \n",
+            "_________________________________________________________________\n",
+            "distribution_lambda_23 (Dist ((None, 10), (None, 10))  0         \n",
+            "=================================================================\n",
+            "Total params: 251,410\n",
+            "Trainable params: 251,410\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "ZfI45_YnE7KG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 87
+        },
+        "outputId": "c4633ebd-9d2d-4f60-b063-0b059006c07d"
+      },
+      "cell_type": "code",
+      "source": [
+        "prob=model(x_train[0:1])\n",
+        "print(prob.mean())\n",
+        "print(prob.sample())"
+      ],
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(\n",
+            "[[0.05310118 0.1209189  0.10375912 0.12454407 0.09468099 0.05655008\n",
+            "  0.05272216 0.21891882 0.14853825 0.02626646]], shape=(1, 10), dtype=float32)\n",
+            "tf.Tensor([[0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]], shape=(1, 10), dtype=float32)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "2ZUo8a37E7Uy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "305198d4-6d05-4c6c-8616-a258d49f831b"
+      },
+      "cell_type": "code",
+      "source": [
+        "history=model.fit(x_train, y_train, \n",
+        "                  batch_size=128, \n",
+        "                  epochs=1,\n",
+        "                  verbose=1, \n",
+        "                  validation_data=(x_val, y_val))"
+      ],
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 50000 samples, validate on 10000 samples\n",
+            "50000/50000 [==============================] - 24s 470us/sample - loss: 0.2958 - accuracy: 0.8603 - val_loss: 0.1444 - val_accuracy: 0.9310\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "YXC8sBArE7fg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -782,7 +921,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 537
         },
-        "outputId": "5fde184e-2f34-4e8b-bde9-5d31d4632ef4"
+        "outputId": "1124ff98-ed02-493c-96ac-9f38b8a69370"
       },
       "cell_type": "code",
       "source": [
@@ -814,36 +953,36 @@
         "\n",
         "model.compile(optimizer=tf.optimizers.Adam(learning_rate=0.001), loss=negloglik,  metrics=['accuracy'])\n"
       ],
-      "execution_count": 118,
+      "execution_count": 128,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_23\"\n",
+            "Model: \"sequential_27\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_flipout_4 (Conv2DFlip (None, 28, 28, 8)         152       \n",
+            "conv2d_flipout_20 (Conv2DFli (None, 28, 28, 8)         152       \n",
             "_________________________________________________________________\n",
-            "conv2d_flipout_5 (Conv2DFlip (None, 28, 28, 8)         1160      \n",
+            "conv2d_flipout_21 (Conv2DFli (None, 28, 28, 8)         1160      \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_46 (MaxPooling (None, 14, 14, 8)         0         \n",
+            "max_pooling2d_54 (MaxPooling (None, 14, 14, 8)         0         \n",
             "_________________________________________________________________\n",
-            "conv2d_flipout_6 (Conv2DFlip (None, 14, 14, 16)        2320      \n",
+            "conv2d_flipout_22 (Conv2DFli (None, 14, 14, 16)        2320      \n",
             "_________________________________________________________________\n",
-            "conv2d_flipout_7 (Conv2DFlip (None, 14, 14, 16)        4624      \n",
+            "conv2d_flipout_23 (Conv2DFli (None, 14, 14, 16)        4624      \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_47 (MaxPooling (None, 7, 7, 16)          0         \n",
+            "max_pooling2d_55 (MaxPooling (None, 7, 7, 16)          0         \n",
             "_________________________________________________________________\n",
-            "flatten_23 (Flatten)         (None, 784)               0         \n",
+            "flatten_27 (Flatten)         (None, 784)               0         \n",
             "_________________________________________________________________\n",
-            "dense_flipout_2 (DenseFlipou (None, 40)                62760     \n",
+            "dense_flipout_10 (DenseFlipo (None, 40)                62760     \n",
             "_________________________________________________________________\n",
-            "dropout_23 (Dropout)         (None, 40)                0         \n",
+            "dropout_27 (Dropout)         (None, 40)                0         \n",
             "_________________________________________________________________\n",
-            "dense_flipout_3 (DenseFlipou (None, 10)                810       \n",
+            "dense_flipout_11 (DenseFlipo (None, 10)                810       \n",
             "_________________________________________________________________\n",
-            "distribution_lambda_19 (Dist ((None, 10), (None, 10))  0         \n",
+            "distribution_lambda_22 (Dist ((None, 10), (None, 10))  0         \n",
             "=================================================================\n",
             "Total params: 71,826\n",
             "Trainable params: 71,826\n",
@@ -862,7 +1001,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 87
         },
-        "outputId": "2c3fc63c-50ad-4881-f820-8828448de1a0"
+        "outputId": "51a39003-c515-4a43-b331-b6974f63fc80"
       },
       "cell_type": "code",
       "source": [
@@ -870,15 +1009,15 @@
         "print(prob.mean())\n",
         "print(prob.sample())"
       ],
-      "execution_count": 120,
+      "execution_count": 131,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "tf.Tensor(\n",
-            "[[0.06762812 0.10525092 0.09024925 0.14417669 0.11546759 0.09000572\n",
-            "  0.10635789 0.09060723 0.0746263  0.1156304 ]], shape=(1, 10), dtype=float32)\n",
-            "tf.Tensor([[0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]], shape=(1, 10), dtype=float32)\n"
+            "[[0.09726461 0.08689034 0.08314801 0.1077532  0.10747664 0.11318882\n",
+            "  0.09034761 0.09518476 0.12843882 0.09030716]], shape=(1, 10), dtype=float32)\n",
+            "tf.Tensor([[0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]], shape=(1, 10), dtype=float32)\n"
           ],
           "name": "stdout"
         }
@@ -892,7 +1031,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1111
         },
-        "outputId": "107aa9ab-86f3-4e4d-e16e-1eceda4e4611"
+        "outputId": "71840510-6286-440f-8705-d1f8c6bcebc7"
       },
       "cell_type": "code",
       "source": [
@@ -902,7 +1041,7 @@
         "                  verbose=1, \n",
         "                  validation_data=(x_val, y_val))"
       ],
-      "execution_count": 121,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,7 +1057,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-121-31733a364af0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m                   \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                   \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m                   validation_data=(x_val, y_val))\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-132-31733a364af0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m                   \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                   \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m                   validation_data=(x_val, y_val))\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[1;32m    872\u001b[0m           \u001b[0mvalidation_steps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_steps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    873\u001b[0m           \u001b[0mvalidation_freq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mvalidation_freq\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 874\u001b[0;31m           steps_name='steps_per_epoch')\n\u001b[0m\u001b[1;32m    875\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    876\u001b[0m   def evaluate(self,\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training_arrays.py\u001b[0m in \u001b[0;36mmodel_iteration\u001b[0;34m(model, inputs, targets, sample_weights, batch_size, epochs, verbose, callbacks, val_inputs, val_targets, val_sample_weights, shuffle, initial_epoch, steps_per_epoch, validation_steps, validation_freq, mode, validation_in_fit, prepared_feed_values_from_dataset, steps_name, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m   \u001b[0;31m# Get step function and loop type.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m   \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_make_execution_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m   \u001b[0muse_steps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mis_dataset\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0msteps_per_epoch\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m   \u001b[0mdo_validation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mval_inputs\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/keras/engine/training_arrays.py\u001b[0m in \u001b[0;36m_make_execution_function\u001b[0;34m(model, mode)\u001b[0m\n\u001b[1;32m    524\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_distribution_strategy\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    525\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdistributed_training_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_execution_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 526\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_execution_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    527\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    528\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
