--- a/variation_bnn_boston.ipynb
+++ b/variation_bnn_boston.ipynb
@@ -259,18 +259,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 52,
       "outputs": [
         {
           "name": "stdout",
           "text": [
-            "Mean  [[24.009594]\n [32.8211  ]]\nRMSE on the test set:  2.671469794721395\nSdev  [[24.372652]\n [33.429905]]\n",
-            "Model log at  [[-310.08273]\n [-622.7005 ]]\n"
+            "Mean  [[24.447548]\n [35.18576 ]]\nRMSE on the test set:  2.524042100995768\nSdev  [[1.]\n [1.]]\n",
+            "Model log at  [[-293.23547]\n [-572.77594]]\n"
           ],
           "output_type": "stream"
         }
       ],
-      "source": "#model.predict(X_test) #Should give values but does not\nmodel_mean \u003d tf.keras.models.Model(inputs\u003dinputs, outputs\u003dp_y.mean())\nprint(\"Mean \", model_mean.predict(X_test)[0:2])\nprint(\u0027RMSE on the test set: \u0027, np.sqrt(np.mean((model_mean.predict(X_test)[:,0] - y_test)**2)))\n\n\nmodel_std \u003d tf.keras.models.Model(inputs\u003dinputs, outputs\u003dp_y.mean())\nprint(\"Sdev \",model_std.predict(X_test)[0:2])\n\nmodel_lp_at01 \u003d tf.keras.models.Model(inputs\u003dinputs, outputs\u003dp_y.log_prob(0.1))\nprint(\"Model log at \", model_lp_at01.predict(X_test)[0:2])",
+      "source": "#model.predict(X_test) #Should give values but does not\nmodel_mean \u003d tf.keras.models.Model(inputs\u003dinputs, outputs\u003dp_y.mean())\nprint(\"Mean \", model_mean.predict(X_test)[0:2])\nprint(\u0027RMSE on the test set: \u0027, np.sqrt(np.mean((model_mean.predict(X_test)[:,0] - y_test)**2)))\n\n\nmodel_std \u003d tf.keras.models.Model(inputs\u003dinputs, outputs\u003dp_y.stddev())\nprint(\"Sdev \",model_std.predict(X_test)[0:2])\n\nmodel_lp_at01 \u003d tf.keras.models.Model(inputs\u003dinputs, outputs\u003dp_y.log_prob(0.1))\nprint(\"Model log at \", model_lp_at01.predict(X_test)[0:2])",
       "metadata": {
         "pycharm": {
           "metadata": false,
