--- a/Animate_Var_Base.ipynb
+++ b/Animate_Var_Base.ipynb
@@ -1494,9 +1494,16 @@
    "source": [
     "### Some Animation\n",
     "\n",
-    "Have been done with R using gganimate.\n",
+    "Have been done with R using gganimate. The transformation to mp4 with: https://ezgif.com/gif-to-mp4\n",
     "\n",
-    "![SegmentLocal](grads_n3_lr_2e-3_woff2.gif)"
+    "![Animation](grads_n3_lr_2e-3_woff2.gif)\n",
+    "\n",
+    "* Animation on [gif](https://github.com/tensorchiefs/dl_book_playground/blob/master/grads_n3_lr_2e-3_woff2.gif)\n",
+    "as [mp4](https://github.com/tensorchiefs/dl_book_playground/blob/master/grads_n3_lr_2e-3_woff2.mp4)\n",
+    "\n",
+    "* Losses [gif](https://github.com/tensorchiefs/dl_book_playground/blob/master/losses_n3_lr_2e-3_woff2.gif)\n",
+    "\n",
+    "* Fit [gif](https://github.com/tensorchiefs/dl_book_playground/blob/master/fit_n3_lr_2e-3_woff2)"
    ]
   },
   {
