--- a/flow/Flow_101.ipynb
+++ b/flow/Flow_101.ipynb
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using several bijectors"
+    "## Using several bijectors"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training Bijectors\n",
+    "# Training Bijectors\n",
     "\n",
     "An extremly simple example, to go from a $N(0,1)$ Gaussian to a $N(5.0,0.2)$ Gaussian. \n",
     "\n",
@@ -295,23 +295,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The simplest flow\n",
+    "#### The simplest flow \n",
     "\n",
     "\n",
-    "Building the flow using an Affine transformation. Simply shift and scale something."
+    "Building the flow using an Affine transformation in 1-D. Simply shift ($b$) and scale ($a$).\n",
+    "\n",
+    "$$\n",
+    "    x = a \\cdot z + b\n",
+    "$$\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=1.0>,\n",
+       " <tf.Variable 'Variable:0' shape=() dtype=float32, numpy=0.0>)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Making a distribution using the flow and a N(0,1)\n",
     "shift = tf.Variable(0.0)\n",
     "scale=tf.Variable(1.0)\n",
     "bijector = tfb.AffineScalar(shift=shift, scale=scale)\n",
-    "dist = tfd.TransformedDistribution(distribution=tfd.Normal(loc=0,scale=1),bijector=bijector)"
+    "dist = tfd.TransformedDistribution(distribution=tfd.Normal(loc=0,scale=1),bijector=bijector)\n",
+    "dist.trainable_variables"
    ]
   },
   {
@@ -322,7 +339,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=239, shape=(), dtype=float32, numpy=13.397392>"
+       "<tf.Tensor: id=241, shape=(), dtype=float32, numpy=13.397392>"
       ]
      },
      "execution_count": 11,
@@ -338,7 +355,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training in eager mode"
+    "### Training in eager mode\n",
+    "\n",
+    "What shall be the result? \n",
+    "\n",
+    "$z \\sim N(0,1) \\overbrace{\\longrightarrow}^{f(z) = a\\cdot z + b} x \\sim N(5,0.2)$. \n",
+    "\n",
+    "Hence, $b = 5$ and $a = 0.2$"
    ]
   },
   {
@@ -350,16 +373,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0   13.397392  shift  0.099999934  scale  1.1\n",
-      "100   1.9093274  shift  3.9791694  scale  2.4480221\n",
-      "200   0.20094235  shift  4.991875  scale  0.38849914\n",
-      "300   -0.20008655  shift  4.9917817  scale  0.19733803\n",
-      "400   -0.20009406  shift  4.99176  scale  0.19808854\n",
-      "500   -0.20009404  shift  4.9917603  scale  0.19809017\n",
-      "600   -0.20009401  shift  4.99176  scale  0.19809018\n",
-      "700   -0.20009407  shift  4.99176  scale  0.1980902\n",
-      "800   -0.20009401  shift  4.9917603  scale  0.1980902\n",
-      "900   -0.20009401  shift  4.99176  scale  0.19809018\n"
+      "0 NLL  13.397392  shift (a)  0.099999934  scale (b)  1.1\n",
+      "100 NLL  1.9093274  shift (a)  3.9791694  scale (b)  2.4480221\n",
+      "200 NLL  0.20094235  shift (a)  4.991875  scale (b)  0.38849914\n",
+      "300 NLL  -0.20008655  shift (a)  4.9917817  scale (b)  0.19733803\n",
+      "400 NLL  -0.20009406  shift (a)  4.99176  scale (b)  0.19808854\n",
+      "500 NLL  -0.20009404  shift (a)  4.9917603  scale (b)  0.19809017\n",
+      "600 NLL  -0.20009401  shift (a)  4.99176  scale (b)  0.19809018\n",
+      "700 NLL  -0.20009407  shift (a)  4.99176  scale (b)  0.1980902\n",
+      "800 NLL  -0.20009401  shift (a)  4.9917603  scale (b)  0.1980902\n",
+      "900 NLL  -0.20009401  shift (a)  4.99176  scale (b)  0.19809018\n"
      ]
     }
    ],
@@ -372,7 +395,7 @@
     "        gradients = tape.gradient(loss, dist.trainable_variables)\n",
     "    optimizer.apply_gradients(zip(gradients, dist.trainable_variables))\n",
     "    if (i % 100 == 0):\n",
-    "        print(i, \" \",loss.numpy(), \" shift \", shift.numpy(), \" scale \", scale.numpy())"
+    "        print(i, \"NLL \",loss.numpy(), \" shift (a) \", shift.numpy(), \" scale (b) \", scale.numpy())"
    ]
   },
   {
@@ -419,7 +442,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: id=140374, shape=(), dtype=float32, numpy=4.99176>"
+       "<tf.Tensor: id=140376, shape=(), dtype=float32, numpy=4.99176>"
       ]
      },
      "execution_count": 14,
