Saving adaption of leaky rely

--- a/flow/Flow_101_save2.ipynb
+++ b/flow/Flow_101_save2.ipynb
@@ -574,6 +574,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tfb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8115acd3daca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# quite easy to interpret - multiplying by alpha causes a contraction in volume.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mLeakyReLU\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtfb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBijector\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbeta\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalidate_args\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"leaky_relu\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLeakyReLU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mforward_min_event_ndims\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malpha\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tfb' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# quite easy to interpret - multiplying by alpha causes a contraction in volume.\n",
+    "class LeakyReLU(tfb.Bijector):\n",
+    "    def __init__(self, alpha=0.5, beta=1.1,validate_args=False, name=\"leaky_relu\"):\n",
+    "        super(LeakyReLU, self).__init__(forward_min_event_ndims=0)\n",
+    "        self.alpha = alpha\n",
+    "        self.beta = beta\n",
+    "\n",
+    "    def _forward(self, z):\n",
+    "        return tf.where(tf.greater_equal(z, 0), self.beta*z, self.alpha * z)\n",
+    "\n",
+    "    def _inverse(self, x):\n",
+    "        return tf.where(tf.greater_equal(x, 0), x/self.beta, x / self.alpha * x)\n",
+    "\n",
+    "    def _inverse_log_det_jacobian(self, x):\n",
+    "        I = tf.ones_like(x)\n",
+    "        J_inv = tf.where(tf.greater_equal(x, 0), 1.0 / self.beta * I, 1.0 / self.alpha * I)\n",
+    "        # abs is actually redundant here, since this det Jacobian is > 0\n",
+    "        log_abs_det_J_inv = tf.math.log(tf.abs(J_inv))\n",
+    "        return tf.reduce_sum(log_abs_det_J_inv, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
